--- a/starter-code/Bookshelf/app/src/main/res/layout/activity_main.xml
+++ b/starter-code/Bookshelf/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,10 @@
 
     <!-- Create your ListView here -->
 
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
 </LinearLayout>
